packages/web-qwik/src/components/blog/blog-side.scoped.scss
@keyframes blod-side-fade {
  from {
    opacity: 0;
    transform: translateX(1rem);
  }
  to {
    opacity: 1;
    transform: translateX(0);
  }
}

.blog-side {
  box-sizing: border-box;
  padding: 0 0.25rem;
  position: sticky;
  top: 4rem;
  // overflow-y: auto;
  // height: calc(100vh - 5rem);
  width: 100%;
  max-width: 480px;
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.side-card {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  border-radius: 0.25rem;
  box-shadow: 0 0 0.125rem rgba(black, 0.2);
  overflow: hidden;
  cursor: pointer;

  animation-name: blod-side-fade;
  animation-duration: 800ms;
  animation-fill-mode: both;
  animation-delay: var(--delay);
}

.side-card-link {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  transition:
    opacity 200ms,
    transform 200ms,
    background-color 200ms;
  background-color: rgb(white, 0.3);

  [data-theme="dark"] & {
    background-color: rgb(black, 0.3);
    box-shadow: 0 0 0.125rem rgb(black, 0.5);
  }

  &:hover {
    opacity: 0.9;
    transform: translateX(-1px) translateY(-1px);
    background-color: rgba(#aebed9, 0.15);
  }

  &:active {
    opacity: 0.7;
    transform: translateX(1px) translateY(1px);
    background-color: rgba(#a0d4b4, 0.15);
  }
}

.side-card-image {
  width: 100%;
  height: auto;
  aspect-ratio: 1140 / 600;
  object-fit: cover;
}

.side-card-content {
  box-sizing: border-box;
  padding: 0.5rem;
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  background-color: rgba(gray, 0.025);

  .side-card-content-description {
    opacity: 0.75;
  }
}

.side-card-tag-container {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  gap: 0.5rem;
  padding: 0 0.5rem;
  height: 2.25rem;
  border-top: solid 1px rgba(gray, 0.2);
}

